# OHGesture

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
ZeroEGGSProcessing/: data_to_h5dataset.py  run.bash  vec.info  word2vec.py  zeggs_data_to_h5.py
diffuse_style_gesture/: debug.ipynb  ohgesture.py  process_data_to_h5.ipynb  run.sh  sample.py  sample_for_eval.py
diffuse_style_gesture/ZEGGS/: generate.py  process_zeggs_bvh.py
diffuse_style_gesture/configs/: DiffuseStyleGesture.yml  OHGesture.yml  parse_args.py
diffuse_style_gesture/data_loader/: data_preprocessor.py  deepgesture_dataset.py  lmdb_data_loader.py
diffusion/: gaussian_diffusion.py  nn.py  resample.py
main/: converter.ipynb  finetune.weight  ohgesture.py  ohgesture_finetune.py  run_sample.sh  sampling.py  word_embedding.py
main/configs/: OHGesture.yml
main/data_loader/: deepgesture_dataset.py  deepgesture_dataset_lmdb.py
main/model/: deepgesture.py
main/ohgesture/: deepgesture.py
main/utils/: model_util.py
main/wavlm/: WavLM.py
model/: deepgesture.py  mdm.py  myactivation.py
mydiffusion_zeggs/: debug.ipynb  end2end.py  ohgesture.py  run.ipynb  sample.py  sampling.py  zeggs_data_to_lmdb.py
mydiffusion_zeggs/.run/: Training.run.xml
mydiffusion_zeggs/WavLM/: modules_WavLM.py
mydiffusion_zeggs/configs/: DiffuseStyleGesture.yml  OHGesture.yml  parse_args.py
ohgesture/: ohgesture.py  sampling.py
ohgesture/configs/: OHGesture.yml
process/: process_zeggs_bvh.py
train/: deepgesture_training_loop.py  training_loop.py
wavlm/: wavlm_embedding.py
(+35 files in other folders)
